<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Image Searcher</string>
    <string name="action_settings">Settings</string>
    <string name="search_prompt">search query</string>
    <string name="search_label">Search</string>
    <string name="image_title">Image Title</string>
    <string name="image_desc">Image content</string>
    <string name="title_activity_image_display">Full Image</string>
    <string name="image_result_content">Image Result Big</string>
    <string name="title_activity_settings">SettingsActivity</string>
    <string name="advanced_filters">Advanced Filters</string>
    <string name="image_size">Image Size</string>
    <string name="color_filter">Color Filter</string>
    <string name="image_type">Image Type</string>
    <string name="site_filter">Site Filter</string>
    <string name="save">Save</string>
    <string name="cancel">Cancel</string>
    <string name="network_not_available">Network not available. Please try later.</string>
    <string name="invalid_site_url">Please enter valid site url.</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="network_failed">Network Request Failed.</string>
    <string name="error_loading_image">Error loading image. </string>
    <string name="share">Share</string>
</resources>
