<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/etSiteFilter"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="5dp"
    android:paddingRight="5dp"
    android:paddingTop="10dp"
    tools:context="com.codepath.frimfram.gridimagesearch.activities.SettingsActivity" >

    <TextView
        android:id="@+id/tvSettingDesc"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:text="@string/advanced_filters" />

    <TextView
        android:id="@+id/tvImageSizeLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/tvSettingDesc"
        android:layout_marginTop="19dp"
        android:text="@string/image_size" />

    <Spinner
        android:id="@+id/spImageSize"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:layout_alignTop="@+id/tvImageSizeLabel"
        android:layout_toRightOf="@+id/tvImageSizeLabel"
        android:entries="@array/image_sizes_array" />

    <TextView
        android:id="@+id/tvColorFilter"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/spImageSize"
        android:layout_marginTop="17dp"
        android:text="@string/color_filter" />
    
    <Spinner
        android:id="@+id/spColorFilter"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:layout_alignTop="@+id/tvColorFilter"
        android:layout_toRightOf="@+id/tvColorFilter"
        android:entries="@array/color_filter_array" />

    <TextView
        android:id="@+id/tvImageType"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/spColorFilter"
        android:layout_marginTop="24dp"
        android:text="@string/image_type" />

    <Spinner
        android:id="@+id/spImageType"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:layout_alignTop="@+id/tvImageType"
        android:layout_toRightOf="@+id/tvImageType"
        android:entries="@array/image_type_array" />

    <EditText
        android:id="@+id/etSiteFilterUri"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:layout_alignBottom="@+id/textView1"
        android:layout_toRightOf="@+id/textView1"
        android:ems="10"
        android:inputType="textUri" >

        <requestFocus />
    </EditText>

    <TextView
        android:id="@+id/textView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/spImageType"
        android:layout_marginTop="18dp"
        android:text="@string/site_filter" />

    <Button
        android:id="@+id/btnSave"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:onClick="onSave"
        android:layout_below="@+id/etSiteFilterUri"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="45dp"
        android:text="@string/save" />
        
</RelativeLayout>
