<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/etSiteFilter"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="10dp"
    android:paddingRight="10dp"
    android:paddingTop="20dp" >

    <TextView
        android:id="@+id/tvImageSizeLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/spImageSize"
        android:layout_alignParentLeft="true"
        android:layout_alignTop="@+id/spImageSize"
        android:gravity="center_vertical"
        android:text="@string/image_size" />

    <Spinner
        android:id="@+id/spImageSize"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/spImageType"
        android:layout_alignParentRight="true"
        android:layout_alignParentTop="true" />

    <TextView
        android:id="@+id/tvColorFilter"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/spColorFilter"
        android:layout_alignParentLeft="true"
        android:layout_alignTop="@+id/spColorFilter"
        android:gravity="center_vertical"
        android:text="@string/color_filter" />

    <Spinner
        android:id="@+id/spColorFilter"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/spImageType"
        android:layout_alignParentRight="true"
        android:layout_below="@+id/tvImageSizeLabel" />

    <TextView
        android:id="@+id/tvImageType"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/spImageType"
        android:layout_alignParentLeft="true"
        android:layout_alignTop="@+id/spImageType"
        android:gravity="center_vertical"
        android:text="@string/image_type" />

    <Spinner
        android:id="@+id/spImageType"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:layout_below="@+id/tvColorFilter"
        android:layout_marginLeft="20dp"
        android:layout_toRightOf="@+id/tvImageType" />

    <TextView
        android:id="@+id/textView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/etSiteFilterUri"
        android:layout_alignLeft="@+id/spImageSize"
        android:layout_alignParentLeft="true"
        android:layout_alignTop="@+id/etSiteFilterUri"
        android:gravity="center_vertical"
        android:text="@string/site_filter" />
    
    <EditText
        android:id="@+id/etSiteFilterUri"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/spImageType"
        android:layout_alignLeft="@+id/spImageType"
        android:layout_alignParentRight="true"
        android:textColor="#333333"
        android:textSize="16sp"
        android:ems="10"
        android:inputType="textUri" >

        <requestFocus />
    </EditText>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/etSiteFilterUri"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="20dp"
        android:layout_marginTop="25dp" >

        <Button
            android:id="@+id/btnSave"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/save" />

        <Button
            android:id="@+id/btnCancel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/cancel" />
    </LinearLayout>

</RelativeLayout>